--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,36 @@
 <div class="side-bar-header">
+  <div class="header-name">
+    <a href="#">ひでかず</a>
+  </div>
+  <div class="create-room">
+    <a href="#">チャットを作成する</a>
+  </div>
 </div>
 
 <div class="rooms">
+  <div class="room">
+    <div class="room-name">
+      <a href="#">test1</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">test2</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">test3</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">test4</a>
+    </div>
+  </div>
+  <div class="room">
+    <div class="room-name">
+      <a href="#">test5</a>
+    </div>
+  </div>
 </div>
