--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -5,8 +5,8 @@
     </div>
   </div>
   <div class="right-header">
-    <div class="header-button">
-      <a href="#">チャットを終了する</a>
+    <div class="heade r-button">
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
     </div>
   </div>
 </div>
